SearchResultEnricherAgent now supports hashmap configuration. Implemented spelling check